feat: added og tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <meta itemprop="description" content="A (quite a bit more) fancy replica of my room.">
   <meta itemprop="image" content="https://my-room.pages.dev/og.png">
 
+  <meta name="twitter:title" content="My Room in 3D">
+  <meta name="twitter:description" content="A (quite a bit more) fancy replica of my room.">
+  <meta name="twitter:image" content="https://my-room.pages.dev/og.png">
+
+  <meta property="og:site_name" content="My Room in 3D">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://my-room.pages.dev">
+  <meta property="og:title" content="My Room in 3D">
+  <meta property="og:description" content="A (quite a bit more) fancy replica of my room.">
+  <meta property="og:image" content="https://my-room.pages.dev/og.png">
+
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="stylesheet" href="./source/app.css" />
 
