feat: improved camera controls and ux

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div id="light" class="fixed w-28 h-28 opacity-0 pointer-events-none top-0 left-0 will-change-transform">
       <span id="start-text"
-        class="absolute w-full -bottom-6 mx-auto text-center font-sans font-extrabold text-xs uppercase">
+        class="absolute w-full hidden -bottom-6 mx-auto text-center font-sans font-extrabold text-xs uppercase">
         Click <br /> To Start
       </span>
     </div>
