feat: adjusting loading screen text sizes

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       </div>
 
       <p class="mt-4 font-sans font-bold flex justify-between px-4">
-        <span id="loading-status-text" class="text-sm md:text-base"></span>
-        <span id="loading-status-percentage" class="text-sm md:text-base">0%</span>
+        <span id="loading-status-text" class="text-xs sm:text-sm md:text-base"></span>
+        <span id="loading-status-percentage" class="text-xs sm:text-sm md:text-base">0%</span>
       </p>
 
     </div>
