chore: added favicon plus meta description

--- a/index.html
+++ b/index.html
@@ -5,23 +5,31 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="🛏️ A (quite a bit more) fancy replica of my room.">
 
   <meta itemprop="name" content="My Room in 3D">
-  <meta itemprop="description" content="A (quite a bit more) fancy replica of my room.">
+  <meta itemprop="description" content="🛏️ A (quite a bit more) fancy replica of my room.">
   <meta itemprop="image" content="https://my-room.pages.dev/og.png">
 
   <meta name="twitter:title" content="My Room in 3D">
-  <meta name="twitter:description" content="A (quite a bit more) fancy replica of my room.">
+  <meta name="twitter:description" content="🛏️ A (quite a bit more) fancy replica of my room.">
   <meta name="twitter:image" content="https://my-room.pages.dev/og.png">
 
   <meta property="og:site_name" content="My Room in 3D">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://my-room.pages.dev">
   <meta property="og:title" content="My Room in 3D">
-  <meta property="og:description" content="A (quite a bit more) fancy replica of my room.">
+  <meta property="og:description" content="🛏️ A (quite a bit more) fancy replica of my room.">
   <meta property="og:image" content="https://my-room.pages.dev/og.png">
 
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="stylesheet" href="./source/app.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
