--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="🛏️ A (quite a bit more) fancy replica of my room.">
+  <meta name="description" content="🛏️ A (quite a bit more) fancy replica of my room, in 3D.">
 
   <meta itemprop="name" content="My Room in 3D">
-  <meta itemprop="description" content="🛏️ A (quite a bit more) fancy replica of my room.">
+  <meta itemprop="description" content="🛏️ A (quite a bit more) fancy replica of my room, in 3D.">
   <meta itemprop="image" content="https://my-room.pages.dev/og.png">
 
   <meta name="twitter:title" content="My Room in 3D">
-  <meta name="twitter:description" content="🛏️ A (quite a bit more) fancy replica of my room.">
+  <meta name="twitter:description" content="🛏️ A (quite a bit more) fancy replica of my room, in 3D.">
   <meta name="twitter:image" content="https://my-room.pages.dev/og.png">
 
   <meta property="og:site_name" content="My Room in 3D">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://my-room.pages.dev">
   <meta property="og:title" content="My Room in 3D">
-  <meta property="og:description" content="🛏️ A (quite a bit more) fancy replica of my room.">
+  <meta property="og:description" content="🛏️ A (quite a bit more) fancy replica of my room, in 3D.">
   <meta property="og:image" content="https://my-room.pages.dev/og.png">
 
   <meta name="msapplication-TileColor" content="#ffffff">
