chore: modified descriptions of site

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
       <p class="font-sans mb-8 font-medium text-center text-xl">
         Made with <span class="inline-block animate-beat">❤️</span> by <a
-          class="text-blue-300 visited:text-blue-300 hover:underline" href="https://github.com/iivvaannxx"
-          target="_blank">@iivvaannxx</a>
+          class="text-blue-300 visited:text-blue-300 hover:underline" href="https://github.com/Wwebur"
+          target="_blank">@Wwebur</a>
       </p>
 
       <div class="relative w-full h-2">
@@ -76,8 +76,8 @@
 
   <main id="app" class="fixed inset-0 w-full h-full"></main>
   <footer class="fixed bottom-0 px-8 py-6 font-sans font-medium w-full text-sm text-center md:text-base md:text-left">
-    My Room in 3D by Ivan Porto Wigner
-    (<a class="underline" target="_blank" rel="noopener noreferrer" href="https://github.com/iivvaannxx/my-room">Source
+    My Room in 3D by Adam Sims
+    (<a class="underline" target="_blank" rel="noopener noreferrer" href="https://github.com/Wwebur/my-3d-room">Source
       Code</a>)
   </footer>
 
