chore: modified descriptions of site

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <main id="app" class="fixed inset-0 w-full h-full"></main>
   <footer class="fixed bottom-0 px-8 py-6 font-sans font-medium w-full text-sm text-center md:text-base md:text-left">
-    My Room in 3D by Adam Sims
+    My Room in 3D by Wwebur
     (<a class="underline" target="_blank" rel="noopener noreferrer" href="https://github.com/Wwebur/my-3d-room">Source
       Code</a>)
   </footer>
